[tool.poetry]
name = "HelloWorld"
version = "0.1.0"
description = ""
authors = ["DarioCabas <hz-hertzio@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
spokestack = "^0.0.22"
numpy = "1.19.2"
tensorflow = "2.7.0"
PyAudio = "^0.2.11"
streamp3 = "^0.1.7"
Cython = "^0.29.28"
wheel = "^0.37.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
